Fix margin bug for staff images on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,7 +208,6 @@ footer h3 {
 
 .staff-member {
     width: 100%;
-    margin: 0 10px;
     margin-bottom: 2rem;
 }
 
@@ -272,6 +271,9 @@ footer h3 {
     }
     .staff-member {
         width: 33%;
+        /* Margin left and right applied @ 768px to fix margin bug on mobile  */
+        margin-left:10px;
+        margin-right: 10px;
     }
 }
 
